--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,219 @@
+
 body {
-    font-family: Roboto;
+    font-family: "Roboto",
+            sans-serif;
+            color: #434455;
+            background-color: #fff;
 }
+ ul,ol {
+    list-style-type: none;
+ }  
+ a {
+    text-decoration: none;
+ }
+ .page-header {}
+
+ .header-nav {}
+
+ .logo {
+font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+ }
+
+ .header-logo .logo-part {
+        color: #2e2f42;
+ }
+
+ .nav-list {}
+
+ .nav-item {}
+
+ .nav-link {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+ }
+
+ .Contacts {
+    font-style: normal;
+ }
+
+ .contacts-list {}
+
+ .contacts-item {}
+
+ .contacts-link {
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #434455;
+ }
+.nav-link:hover,
+.nav-link:focus,
+ .contacts-link:hover,
+.contacts-link:focus {
+    color: #404bbf;
+}
+ .hero {
+background-color: #2e2f42;
+ }
+.title {
+font-weight: 700;
+   font-size: 56px;
+   line-height: 1.07;
+   letter-spacing: 0.02em;
+   text-align: center;
+   color: #fff;
+ }
+
+ .btn {
+   font-weight: 500;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.04em;
+      color: #fff;
+      box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+         background: #4d5ae5;
+         cursor: pointer;
+ }
+.btn:hover {
+   background-color: #404bbf;;
+}
+
+ .core-values {}
+
+ .core-values-title {
+font-weight: 700;
+   font-size: 36px;
+   line-height: 1.11111;
+   letter-spacing: 0.02em;
+   text-align: center;
+   color: #2e2f42;
+}
+
+ .core-values-list {}
+
+ .core-values-item {}
+
+ .core-values-sudtitle {
+   font-weight: 500;
+      font-size: 20px;
+      line-height: 1.2;
+      letter-spacing: 0.02em;
+      color: #2e2f42;
+ }
+
+ .core-values-text {
+font-weight: 400;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #434455;
+ }
+
+ .team {
+   background-color: #f4f4fd;
+ }
+
+ .team-title {
+font-weight: 700;
+   font-size: 36px;
+   line-height: 1.11111;
+   letter-spacing: 0.02em;
+   text-align: center;
+   color: #2e2f42;
+ }
+
+ .team-list {} 
+ 
+
+ .team-item {}
+
+.team-photo {
+   background: url("path_to_image");
+}
+
+ .team-name {
+   font-weight: 500;
+      font-size: 20px;
+      line-height: 1.2;
+      letter-spacing: 0.02em;
+      text-align: center;
+      color: #2e2f42;
+ }
+
+ .team-text {
+ 
+   font-weight: 400;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.02em;
+      text-align: center;
+      color: #434455;
+ }
+ .team-photo,
+ .team-name,
+ .team-text {
+   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+      background-color: #fff;
+ }
+ .portfolio {}
+
+ .portfolio-title {
+font-weight: 700;
+   font-size: 36px;
+   line-height: 1.11111;
+   letter-spacing: 0.02em;
+   text-align: center;
+   color: #2e2f42;
+ }
+
+ .portfolio-list {}
+
+ .portfolio-item {}
+
+ .portfolio-icon {
+   background: url("path_to_image");
+ }
+
+ .portfolio-subtitle {
+font-weight: 500;
+   font-size: 20px;
+   line-height: 1.2;
+   letter-spacing: 0.02em;
+   color: #2e2f42;
+ }
+
+ .portfolio-text {
+font-weight: 400;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #434455;
+ }
+
+ .page-footer {
+   background-color: #2e2f42;
+ }
+
+ .footer-logo {
+   color: #4d5ae5;
+ }
+ .logo-part {
+color: #f4f4fd;
+ }
+
+ .footer-text {
+  font-weight: 400;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #f4f4fd;
+ }
