corrected html and file css

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,12 +79,11 @@ font-weight: 700;
       line-height: 1.5;
       letter-spacing: 0.04em;
       color: #fff;
-      box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
          background: #4d5ae5;
          cursor: pointer;
  }
 .btn:hover {
-   background-color: #404bbf;;
+   background-color: #404bbf;
 }
 
  .core-values {}
@@ -125,10 +124,11 @@ font-weight: 400;
  .team-title {
 font-weight: 700;
    font-size: 36px;
-   line-height: 1.11111;
+   line-height: 1.11;
    letter-spacing: 0.02em;
    text-align: center;
    color: #2e2f42;
+   text-transform: capitalize;
  }
 
  .team-list {} 
@@ -164,9 +164,10 @@ font-weight: 700;
  .portfolio {}
 
  .portfolio-title {
+   text-transform: capitalize;
 font-weight: 700;
    font-size: 36px;
-   line-height: 1.11111;
+   line-height: 1.11;
    letter-spacing: 0.02em;
    text-align: center;
    color: #2e2f42;
@@ -201,6 +202,12 @@ font-weight: 400;
  }
 
  .footer-logo {
+   font-family: "Raleway", sans-serif;
+   font-weight: 700;
+   font-size: 18px;
+   line-height: 1.17;
+   letter-spacing: 0.03em;
+   text-transform: uppercase;
    color: #4d5ae5;
  }
  .logo-part {
